--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   --light-header-sticky-background: rgba(0, 0, 0, 0.8);
   --dark-color: rgba(255, 255, 255, 0.87);
   --dark-background: #242424;
-  --dark-button-background: #646cff;
+  --dark-button-background: #ffa2d8;
   --dark-button-color: white;
   --dark-header-background: rgba(0, 0, 0, 0.5);
   --dark-header-sticky-background: rgba(0, 0, 0, 0.8);
@@ -46,11 +46,11 @@
   align-items: center;
   cursor: pointer;
   height: 200px;
-  padding-top: 90px;
+  padding-top: 30px;
 }
 
 .navbar-logo {
-  height: 200px;
+  height: 500px;
   width: auto;
   object-fit: contain;
 }
@@ -90,7 +90,6 @@
   background-color: var(--dark-header-background);
 }
 
-/* Homepage Styles */
 .hero-section {
   text-align: center;
   padding: 60px 0;
